test remote cross-compilation tool; make ssh shells interactive to inherit typical user env

--- a/src/tumblr/circuit/boot/sandbox.config
+++ b/src/tumblr/circuit/boot/sandbox.config
@@ -9,15 +9,19 @@
 		"Binary":  "4r-sandbox"
 	},
 	"Build": {
-		"Repo":             "git@github.com:tumblr/platform.git",
-		"GoPath":           "go",
-		"Pkg":              "tumblr/TUMBLR/app",
-		"Host":             "localhost",
-		"Tool":             "/Users/petar/gocircuit/src/tumblr/circuit/4build/4build",
+		"Binary":           "4r-sandbox",
 		"Jail":             "/Users/petar/_circuit/build",
+		"AppRepo":          "git@github.com:tumblr/platform.git",
+		"AppSrc":           "go",
+		"Pkg":              "tumblr/stat",
+		"Show":             true,
 		"RebuildGo":        true,
-		"ShipDir":          "/Users/petar/_circuit/ship",
 		"ZookeeperInclude": "/Users/petar/local/include/c-client-src",
-		"ZookeeperLib":     "/Users/petar/local/lib"
+		"ZookeeperLib":     "/Users/petar/local/lib",
+		"CircuitRepo":      "git@github.com:tumblr/gocircuit.git",
+		"CircuitSrc":       ".",
+		"Host":             "localhost",
+		"Tool":             "/Users/petar/gocircuit/src/tumblr/circuit/cmd/4build/4build",
+		"ShipDir":          "/Users/petar/_circuit/ship"
 	}
 }
