--- a/src/circuit/exp/telefile/circuit.config
+++ b/src/circuit/exp/telefile/circuit.config
@@ -11,14 +11,14 @@
 	"Build": {
 		"Host":             "localhost",
 		"Jail":             "/Users/petar/_telefile/build",
-		"AppRepo":          "{git}/Users/petar/gocircuit",
+		"AppRepo":          "{rsync}/Users/petar/gocircuit",
 		"AppSrc":           "/",
 		"Pkg":              "circuit/exp/telefile/srv",
 		"Show":             true,
 		"RebuildGo":        false,
 		"ZookeeperInclude": "/Users/petar/local/include/c-client-src",
 		"ZookeeperLib":     "/Users/petar/local/lib",
-		"CircuitRepo":      "{git}/Users/petar/gocircuit",
+		"CircuitRepo":      "{rsync}/Users/petar/gocircuit",
 		"CircuitSrc":       "/",
 		"Tool":             "/Users/petar/gocircuit/bin/4build",
 		"ShipDir":          "/Users/petar/_telefile/ship"
